// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Table Basic Component Prop - borderless: true 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--borderless">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - fixed_width_columns items: first 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--fixed-width-columns--first">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - fixed_width_columns items: first-two 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--fixed-width-columns--first-two">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - fixed_width_columns items: none 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--fixed-width-columns--none">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - fixed_width_columns items: second 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--fixed-width-columns--second">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - fixed_width_table: true 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--fixed-width-table">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - format items: numeric 1`] = `
<table class="c-bolt-table-basic c-bolt-table-basic--numeric">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic Component Prop - format items: regular 1`] = `
<table class="c-bolt-table-basic">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bolt Table Basic default 1`] = `
<table class="c-bolt-table-basic">
  <tbody>
    <tr>
      <td>
        R1C1
      </td>
      <td>
        R1C2
      </td>
      <td>
        R1C3
      </td>
    </tr>
    <tr>
      <td>
        R2C1
      </td>
      <td>
        R2C2
      </td>
      <td>
        R2C3
      </td>
    </tr>
    <tr>
      <td>
        R3C1
      </td>
      <td>
        R3C2
      </td>
      <td>
        R3C3
      </td>
    </tr>
  </tbody>
</table>
`;
